get rid of overflow (temporary fix)

--- a/src/modules/navigation/containers/footer/footer.component.scss
+++ b/src/modules/navigation/containers/footer/footer.component.scss
@@ -1,1 +1,7 @@
 @import 'styles/variables.scss';
+
+
+p{
+    font-size: 20px;
+    color: white;
+}
