--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,8 @@
     background-color: red($color: #000000);
     width: 100vw;
     min-height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
     //padding-bottom: 10rem;
 }
 
